Add category images for women, divide category images by gender